   thread executes the same number of flops, given as argument. An example of this new
   function can be found in examples/cpp/exec-threads.
 - Reimplementation of barriers natively. 
   Previously, they were implemented on top of s4u::Mutex and s4u::ConditionVariable. 
   The new version should be faster (and can be used in the model-checker).

MSG:
 - MSG_barrier_destroy now expects a non-const msg_barrier parameter.

New plugin: the Chaos Monkey (killing actors at any time)
 - Along with the new simgrid-monkey script, it tests whether your simulation 
   resists resource failures at any possible timestamp in your simulation. 
 - It is mostly intended to test the simgrid core in extreme conditions, 
   but users may find it interesting too.

Models:
 - New model for parallel task: ptask_BMF.
   - More realistic sharing of heterogeneous resources compared to ptask_L07.
   - Implement the BMF (Bottleneck max fairness) fairness.
   - Improved resource sharing for parallel tasks with sub-flows (parallel
   communications between same source and destination inside the ptask).
   - Parameters:
     - "--cfg=host/model:ptask_BMF": enable the model.
     - "--cfg=bmf/max-iterations: <N>" - maximum number of iterations performed
	 by BMF solver (default: 1000).
	 - "--cfg=bmf/selective-update:<true/false>" - enable/disable the
	 selective-update optimization. Only invalidates and recomputes modified
	 parts of inequations system. May speed up simulation if sparse resource
	 utilization (default: false).
   - ATTENTION: this model requires Eigen3 library. If you install SimGrid
   from source, please see the "Installing from source" section:
   https://simgrid.org/doc/latest/Installing_SimGrid.html#installing-from-the-source.
   No action is required if you use pre-compiled packages.

XBT:
 - Drop xbt_dynar_shrink().

Python:
 - Added the following bindings: Comm.wait_for() and Comm.wait_any_for()
   Example: examples/python/comm-waitfor/
